NIHVIVO-3485: Fixing layout issues after associating a profile.

--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -1614,3 +1614,7 @@ input.add-account:active {
 #associateProfileBackgroundThree {
     margin-top:-120px; 
 }
+#associateProfileBackgroundTwo {
+    padding:7px 94px 45px 0;
+    margin-top:-120px; 
+}
